[tool.poetry]
name = "lessons-18"
version = "0.1.0"
description = ""
authors = ["Mikhail Polyakov PyCharm <mikhapol@bk.ru>"]
readme = "README.md"
packages = [{include = "lessons_18"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.90.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
